JobAdapter works that is dedicated for TakeAJobAcitivity. design of a list changed a bit

--- a/AuthorityApp/app/src/main/res/layout/activity_take_a_job.xml
+++ b/AuthorityApp/app/src/main/res/layout/activity_take_a_job.xml
@@ -24,6 +24,7 @@
         android:id="@+id/list_of_jobs"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_jobs_list"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" />
