--- a/AuthorityApp/app/src/main/res/layout/activity_take_a_job.xml
+++ b/AuthorityApp/app/src/main/res/layout/activity_take_a_job.xml
@@ -20,21 +20,36 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_huge"
         android:layout_centerHorizontal="true"/>
-    <Button
-        android:id="@+id/btn_refresh"
-        android:layout_below="@id/tv_jobs_list"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ln_btn_holder"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/refresh"
-        android:drawableLeft="@drawable/map_icon"
-        style="@style/home_button_rounded_overlay_tall"
-        />
+        android:layout_below="@+id/tv_jobs_list"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_refresh"
+            android:layout_below="@id/tv_jobs_list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/refresh"
+            style="@style/home_button_rounded_overlay_tall"
+            />
+        <Button
+            android:id="@+id/btn_return_job"
+            android:layout_below="@id/tv_jobs_list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/return_job"
+            style="@style/home_button_rounded_overlay_tall"
+            />
+        </LinearLayout>
     <ListView
         android:id="@+id/list_of_jobs"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_refresh"
+        android:layout_below="@+id/ln_btn_holder"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" />
