--- a/AuthorityApp/app/src/main/res/layout/list_of_jobs_row.xml
+++ b/AuthorityApp/app/src/main/res/layout/list_of_jobs_row.xml
@@ -24,7 +24,8 @@
                     android:id="@+id/tv_job_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Description" />
+                    android:text="Description"
+                    android:textColor="@color/white"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
@@ -57,7 +58,7 @@
             android:orientation="horizontal" >
             <Button
                 android:id="@+id/btn_row_view"
-                android:text="View this job"
+                android:text="View details"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 style="@style/button_rounded_transparent_normal"
