--- a/AuthorityApp/app/src/main/res/values/color.xml
+++ b/AuthorityApp/app/src/main/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- grayscale -->
     <color name="white"     >#FFFFFF</color>
+    <color name="gray_super_light">#DDDDDD</color>
     <color name="gray_light">#DBDBDB</color>
     <color name="gray"      >#939393</color>
     <color name="gray_dark" >#5F5F5F</color>
