--- a/AuthorityApp/app/src/main/res/layout/activity_highscores.xml
+++ b/AuthorityApp/app/src/main/res/layout/activity_highscores.xml
@@ -1,31 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:orientation="vertical"
+    android:padding="@dimen/spacing_small"
     tools:context="it.polimi.guardian.authorityapp.HighscoresActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/bg_main"
-        android:scaleType="centerCrop"
-        tools:ignore="ContentDescription"
-        />
     <TextView
-        android:id="@+id/tv_rankings"
-        android:text="Rankings:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/font_huge"
-        android:layout_centerHorizontal="true"/>
+        android:textAllCaps="true"
+        android:text="@string/ranking"
+        style="@style/app_text_normal"
+        />
+
+    <View style="@style/divider_black"
+        android:id="@+id/filter_list_header_divider"
+        android:layout_marginBottom="@dimen/spacing_normal"/>
+
 
     <ListView
         android:id="@+id/list_highscores"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_rankings"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" />
-</RelativeLayout>
+</LinearLayout>
