--- a/AuthorityApp/app/src/main/res/layout/list_of_highscores_row.xml
+++ b/AuthorityApp/app/src/main/res/layout/list_of_highscores_row.xml
@@ -1,44 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lnHighscoreHolder"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_selector"
-    android:orientation="vertical"
-    android:padding="5dip" >
+    android:padding="@dimen/spacing_small"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/lnH3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal" >
-        <LinearLayout
-            android:id="@+id/lnH4"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-            <TextView
-                android:id="@+id/tv_row_username"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                style="@style/home_button_rounded_overlay_tall"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/lnH5"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-            <Button
-                android:id="@+id/tv_row_score"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                style="@style/home_button_rounded_overlay_tall"
-                />
-        </LinearLayout>
+        android:layout_marginBottom="@dimen/spacing_tiny">
 
+        <TextView
+            android:id="@+id/tv_row_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minEms="2"
+            />
+
+        <TextView
+            android:id="@+id/tv_row_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
+    <View style="@style/divider_gray" />
 </LinearLayout>
