--- a/AuthorityApp/app/src/main/res/values/styles_UI_elements.xml
+++ b/AuthorityApp/app/src/main/res/values/styles_UI_elements.xml
@@ -49,7 +49,18 @@
         <item name="android:minHeight">@dimen/button_height_normal</item>
         <item name="android:paddingLeft">@dimen/spacing_small</item>
         <item name="android:background">@color/transparent</item>
+    </style>
+
+    <style name="button_refresh_text_transparent" parent="button_image_text_transparent">
         <item name="android:drawableLeft">@drawable/button_selector_image_refresh_text_transparent</item>
+    </style>
+
+    <style name="button_cancel_text_transparent" parent="button_image_text_transparent">
+        <item name="android:drawableLeft">@drawable/button_selector_image_cancel_text_transparent</item>
+    </style>
+
+    <style name="button_arrow_text_transparent" parent="button_image_text_transparent">
+        <item name="android:drawableRight">@drawable/button_selector_image_refresh_text_transparent</item>
     </style>
 
 
